# statistics

./: .gitignore  CNAME  README.md  index.html  notebook.html  viewer.css  viewer.html  viewer.js
notes/practical_statistics_for_data_scientists/: pyproject.toml
notes/practical_statistics_for_data_scientists/01_exploratory_data_analysis/: 01_location_estimates.ipynb  02_variability_estimates.ipynb  03_exploring_data_distribution.ipynb  04_exploring_binary_and_categorical_data.ipynb  05_correlation.ipynb  06_exploring_two_or_more_variables.ipynb
notes/practical_statistics_for_data_scientists/02_data_and_sampling_distributions/: 01_sampling_distribution_of_statistic.ipynb  02_bootstrap.ipynb  03_normal_distribution.ipynb  04_long_tailed_distributions.ipynb  05_binomial_distribution.ipynb  06_chi_square_distribution.ipynb  07_poisson_distributions.ipynb
notes/practical_statistics_for_data_scientists/02_data_and_sampling_distributions/.ipynb_checkpoints/: 01_sampling_distribution_of_statistic-checkpoint.ipynb  02_bootstrap-checkpoint.ipynb  03_normal_distribution-checkpoint.ipynb  04_long_tailed_distributions-checkpoint.ipynb  05_binomial_distribution-checkpoint.ipynb  (+2 more)
notes/practical_statistics_for_data_scientists/03_statistical_experiments_and_significance_testing/: 01_permutation_test.ipynb  02_ab_testing.ipynb  03_t_test.ipynb
notes/think_stats/: 01_exploratory_data_analysis.ipynb  02_distributions.ipynb  03_pmf.ipynb  04_cdf.ipynb  05_modeling_distributions.ipynb  pyproject.toml
notes/think_stats/data/: Shooting_at_the_2020_Summer_Olympics_Mens_skeet.html
(+10 files in other folders)
