[project]
name = "databook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=6.31.0",
  "jupytext>=1.17.3",
  "matplotlib>=3.10.6",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material[imaging]>=9.6.21",
  "pandas>=2.3.3",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.5",
  "tk>=0.1.0",
  "wquantiles>=0.6",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*Jupyter is migrating.*:DeprecationWarning"]

[dependency-groups]
dev = ["pandas-stubs>=2.3.2.250926"]
