[project]
name = "think-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "empiricaldist>=0.9.0",
  "ipykernel>=7.1.0",
  "ipython>=9.10.0",
  "lxml>=6.0.2",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "pandas>=3.0.0",
  "statadict>=1.1.0",
  "statsmodels>=0.14.6",
  "tables>=3.10.2",
]
